# FLIMfit

./: .gitignore  .gitmodules  .hgignore  .hgtags  BuildFLIMfit.bat  BuildFLIMfit.sh  BuildFLIMfit_Mac.sh  BuildFLIMfit_WIN.bat  BuildFLIMfit_WIN32.bat  BuildFLIMfit_WIN64.bat  BuildFLIMfit_unix.sh  BuildMacApp.sh  BuildWin.bat  CMakeLists.txt  Changelog.md  Configure.bat  Configure.sh  Configure_MAC.sh  GatherDependencies.bat  GatherDependencies.ps1  README.md  README.txt  SignInstaller.bat  Third Party Licenses.txt  azure-pipelines.yaml  azure-pipelines.yml  build-flimfit.bat  build-mex.bat  conanfile.txt  gcs_upload.py  install-mcr.py  vcpkg.json
FLIMfitLibrary/: Build_MAC.sh  Build_MAC64.sh  Build_WIN.bat  Build_WIN32.bat  Build_WIN64.bat  CMakeLists.txt
FLIMfitLibrary/Boost/: Boost.txt
FLIMfitLibrary/DataFitter/: AbstractFitter.cpp  AbstractFitter.h  CMakeLists.txt  ConcurrencyAnalysis.h  DecayResampler.h  FLIMData.cpp  FLIMData.h  FLIMImage.cpp  FLIMImage.h  FitResults.cpp  FitResults.h  FitStatus.cpp  FitStatus.h  FlagDefinitions.h  ImageStats.h  LinearMLModel.cpp  LinearMLModel.h  MaximumLikelihood.cpp  MaximumLikelihoodFitter.cpp  MaximumLikelihoodFitter.h  MeanLifetimeEstimator.cpp  MeanLifetimeEstimator.h  ProgressReporter.h  RegionData.cpp  RegionData.h  RegionStats.h  RegionStatsCalculator.h  TrimmedMean.h  VariableProjectionFitter.cpp  VariableProjectionFitter.h  VariableProjector.cpp  VariableProjector.h  cminpack.h  cminpack_support.c  cminpack_support.cpp  fdjac2.cpp  lmder.c  lmdif.cpp  lmdifx.c  lmmle.cpp  (+8 more)
FLIMfitLibrary/FLIMDecayModel/: Aberration.cpp  Aberration.h  AbstractBackgroundDecayGroup.cpp  AbstractBackgroundDecayGroup.h  AbstractConvolver.cpp  AbstractConvolver.h  AbstractDecayGroup.cpp  AbstractDecayGroup.h  AcquisitionParameters.cpp  AcquisitionParameters.h  AlignedVectors.h  AnisotropyDecayGroup.cpp  AnisotropyDecayGroup.h  BackgroundLightDecayGroup.cpp  BackgroundLightDecayGroup.h  CMakeLists.txt  DataTransformer.cpp  DataTransformer.h  DecayModel.cpp  DecayModel.h  ExponentialPrecomputationBuffer.cpp  ExponentialPrecomputationBuffer.h  FLIMBackground.h  FLIMImage.cpp  FLIMImage.h  FastErf.h  FittingParameter.h  FretDecayGroup.cpp  FretDecayGroup.h  GaussianIrf.cpp  GaussianIrf.h  GaussianIrfConvolver.cpp  GaussianIrfConvolver.h  IRFConvolution.cpp  IRFConvolution.h  InstrumentResponseFunction.cpp  InstrumentResponseFunction.h  MeasuredIrf.cpp  MeasuredIrf.h  MeasuredIrfConvolver.cpp  (+18 more)
FLIMfitLibrary/FLIMWidgets/: AbstractItemDelegate.cpp  AbstractItemDelegate.h  CMakeLists.txt  ChannelFactorListDelegate.cpp  ChannelFactorListDelegate.h  ChannelFactorListModel.cpp  ChannelFactorListModel.h  FittingParametersWidget.cpp  FittingParametersWidget.h  FittingParametersWidget.ui  ParameterListDelegate.h  ParameterListModel.cpp  ParameterListModel.h
FLIMfitLibrary/FLIMfit/: CMakeLists.txt  FLIMGlobalAnalysis.h  FLIMGlobalFitController.cpp  FLIMGlobalFitController.h  FLIMGlobalFitController_GetImageResults.cpp  FLIMGlobalFitController_ProcessRegion.cpp  FitController.cpp  FitController.h  FitSettings.cpp  FitSettings.h  ModelADA.cpp  ModelADA.h
FLIMfitLibrary/FLIMfitLib/: CMakeLists.txt  FLIMGlobalAnalysis.h  FLIMGlobalFitController_GetImageResults.cpp  FLIMGlobalFitController_ProcessRegion.cpp  FitController.cpp  FitController.h  FitSettings.h  QFitController.h
FLIMfitLibrary/FLIMfitMex/: CMakeLists.txt  ControllerMex.cpp  DecayModelMex.cpp  DummyMain.cpp  FLIMDataMex.cpp  FLIMImageMex.cpp  FLIMfitMex.cpp  FLIMfitMex.h  FitResultsMex.cpp  MexUtils.cpp  MexUtils.h  PointerMap.h
FLIMfitLibrary/FLIMfitQT/: AbstractItemDelegate.h  CMakeLists.txt  ChannelFactorListDelegate.cpp  ChannelFactorListModel.cpp  ChannelFactorListModel.h  ColormappedImageWidget.cpp  ColormappedImageWidget.h  DataSettingsWidget.ui  DecayWidget.cpp  DecayWidget.h  FLIMImageSet.cpp  FLIMImageSet.h  FLIMImageWidget.h  FLIMImageWidget.ui  FLIMImporter.cpp  FLIMImporter.h  FLIMSetListView.h  FLIMfitLauncher.h  FLIMfitLauncher.ui  FLIMfitWindow.cpp  FLIMfitWindow.h  FitResultsWidget.h  FittingParametersWidget.cpp  FittingParametersWidget.h  FittingParametersWidget.ui  FittingWidget.cpp  FittingWidget.h  IRFWidget.ui  ImporterWidget.h  ImporterWidget.ui  ParameterListDelegate.cpp  ParameterListDelegate.h  ParameterListModel.cpp  ParameterListModel.h  PhasorWidget.h  ProgressWidget.h  ResultsTableModel.h  SafeApplication.h  decaywidget.ui  fitresultswidget.ui  (+6 more)
FLIMfitLibrary/Libraries/: FLIMGlobalAnalysis.h  FlagDefinitions.h
FLIMfitLibrary/Source/: AbstractDecayGroup.cpp  AbstractFitter.cpp  AbstractFitter.h  AcquisitionParameters.cpp  AcquisitionParameters.h  CMakeLists.txt  ConcurrencyAnalysis.h  DecayModel.cpp  DecayModel.h  DecayModel_old.h  ExponentialPrecomputationBuffer.cpp  ExponentialPrecomputationBuffer.h  FLIMData.cpp  FLIMData.h  FLIMGlobalAnalysis.cpp  FLIMGlobalAnalysis.h  FLIMGlobalFitController.cpp  FLIMGlobalFitController.h  FLIMGlobalFitController_ADA.cpp  FLIMGlobalFitController_GetImageResults.cpp  FLIMGlobalFitController_Model.cpp  FLIMGlobalFitController_ProcessRegion.cpp  FLIMfit.cpp  FitModel.h  FitResults.cpp  FitResults.h  FitSettings.cpp  FitSettings.h  FitStatus.cpp  FitStatus.h  FlagDefinitions.h  IRFConvolution.cpp  IRFConvolution.h  ImageStats.h  InstrumentResponseFunction.cpp  InstrumentResponseFunction.h  MaximumLikelihoodFitter.cpp  MaximumLikelihoodFitter.h  MexUtils.h  ModelParameters.cpp  (+19 more)
FLIMfitLibrary/TestHarness/: Attenuator.h  CMakeLists.txt  Cout2VisualStudioDebugOutput.h  FLIMSimulation.cpp  FLIMSimulation.h  FLIMSimulationTCSPC.cpp  FLIMSimulationWF.cpp  QR_test.h  TestDecayModelDerivatives.cpp  TestDecayResampler.cpp  TestFittingCore.cpp  TestHarness.cpp  catch.hpp
FLIMfitLibrary/levmar-2.6ML/: CMakeLists.txt  compiler.h  lm_core.c  lmbc_core.c
GlobalProcessingLibrary/: CMakeLists.txt
GlobalProcessingLibrary/Boost/: Boost.txt
GlobalProcessingLibrary/Libraries/: FLIMGlobalAnalysis.h  FlagDefinitions.h  Libraries.txt
GlobalProcessingLibrary/Source/: AbstractFitter.cpp  AbstractFitter.h  CMakeLists.txt  ConcurrencyAnalysis.h  (+49 more)
(+1670 files in other folders)
